# Openai_SDK_Agents

./: README.md  README>md
02_openrouter/practice_openrouter/: example_1.py  main.py  pyproject.toml
03_litellm_openai_agent/01_litellm/myproject/: README.md  pyproject.toml
03_litellm_openai_agent/01_litellm/myproject/src/myproject/: hello.py
03_litellm_openai_agent/litellm_test/: exp_1.py  pyproject.toml
04_hello_agent/hello_agent/: run_level.py
05_chainlit/helloworld/: chatbot.py
06_chatbot/chatbot/: main.py
07_Streaming/chatbot-streaming/: main.py  pyproject.toml
08_tools/tools/: computer.py  description.txt  pyproject.toml  tool_practice.py  tools.ipynb
08_tools/tools_with_chainlit/: main.py  pyproject.toml
08_tools/weather-agent/: chatbot.py  hello.py  pyproject.toml
08_tools/weather_agent_class/: pyproject.toml
08_tools/weather_agent_class/src/weather_agent_class/: __init__.py  main.py
09_agents_as_tool/agent_as_tool/: main.py  pyproject.toml
09_agents_as_tool/chatbot/: main.py
10_context/chatbot/: main.py
10_context/context/: agent_context.py  config.py  local_context.py  main.py  pyproject.toml
11_handoffs/chatbot/: main.py  pyproject.toml
11_handoffs/handoffs/: handoff_func2.py  handoffs_func.py  handoffs_list.py  main.py  pyproject.toml
12_structured_output/structured_output/: main.py  pyproject.toml
13_guadrails/chatbot/: config.py  input_guard.py  main.py  (+2 more)
OPEN_AI_AGENTS_SDK_NEW/: readme.md
OPEN_AI_AGENTS_SDK_NEW/22_memory_management/: 01_embeddings_and_vector_search.py  02_memo.py  main.py  pyproject.toml
(+141 files in other folders)
